# patron_oss

./: .gitignore
data/: install.sh
data/alsa-utils-1.2.6/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.ac~
data/alsa-utils-1.2.6/.pc/: applied-patches
data/alsa-utils-1.2.6/alsa-info/: Makefile  Makefile.in  alsa-info.sh.1
data/alsa-utils-1.2.6/alsaconf/: Makefile  Makefile.in  alsaconf
data/alsa-utils-1.2.6/alsactl/: 90-alsa-restore.rules  90-alsa-restore.rules.in  Makefile  Makefile.am  Makefile.in  alsa-restore.service  alsa-restore.service.in  alsa-state.service  alsa-state.service.in  alsactl  alsactl.c  init_parse.c  state.c
data/alsa-utils-1.2.6/alsaloop/: Makefile  Makefile.in  alsaloop
data/alsa-utils-1.2.6/alsamixer/: Makefile  Makefile.in  alsamixer  cli.c
data/alsa-utils-1.2.6/alsaucm/: Makefile  Makefile.in  alsaucm
data/alsa-utils-1.2.6/amidi/: Makefile  Makefile.in  amidi
data/alsa-utils-1.2.6/amixer/: Makefile  Makefile.in  amixer  amixer.c
data/alsa-utils-1.2.6/aplay/: Makefile  Makefile.in  aplay
data/alsa-utils-1.2.6/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.2  traces.3  traces.4  traces.5
data/alsa-utils-1.2.6/axfer/: Makefile  Makefile.in  axfer
data/alsa-utils-1.2.6/bat/: Makefile  Makefile.in  alsabat
data/alsa-utils-1.2.6/debian/: changelog  control  copyright  docs  rules  watch
data/alsa-utils-1.2.6/iecset/: Makefile  Makefile.in  iecset  iecset.c
data/alsa-utils-1.2.6/include/: Makefile  Makefile.in  aconfig.h  aconfig.h.in  aconfig.h.in~  version.h
data/alsa-utils-1.2.6/m4/: Makefile  Makefile.in
data/alsa-utils-1.2.6/po/: Makefile  Makefile.in  alsa-utils.pot  de.po  eu.po  fr.po  ja.po  sk.po
data/alsa-utils-1.2.6/seq/: Makefile  Makefile.in
data/alsa-utils-1.2.6/sparrow/: .smake.out  Makefile
data/alsa-utils-1.2.6/speaker-test/: Makefile  Makefile.in  speaker-test
data/alsa-utils-1.2.6/topology/: Makefile  Makefile.in
data/alsa-utils-1.2.6/utils/: Makefile  Makefile.in  alsa-utils.spec
data/cccd-0.3beta4/: BUGREPORT  CHANGES  Makefile  README  README.original  cccd  cccd.1  cccd.c  cccd.h  cccd.spec  cd.c  cd.h  cddb.c  cddb.h  cddbp.c  cddbp.h  general.h  icons.h  info.c  info.h  misc.c  misc.h  options.c  options.h
data/cccd-0.3beta4/.pc/: applied-patches
data/cccd-0.3beta4/debian/: changelog  control  copyright  docs  menu  rules  watch
data/cccd-0.3beta4/sparrow/: .root  .smake.out  Makefile  cd.o.i  cddb.o.i  cddbp.o.i  options.o.i
data/darktable-3.8.1/: CMakeLists.txt  build.sh
data/darktable-3.8.1/debian/: NEWS  changelog  clean  control  copyright  rules  watch
data/darktable-3.8.1/src/: version_gen.c
data/darktable-3.8.1/tmp_out/: CMakeCache.txt
data/dcraw-9.28/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.in  NEWS  README  config.status  configure  configure.ac  dccleancrw  dcfujigreen  dcfujiturn  dcfujiturn16  dcparse  dcraw
data/dcraw-9.28/.deps/: clean_crw.Po  dcfujiturn16-fujiturn.Po  dcraw-dcraw.Po  fuji_green.Po  fujiturn.Po  parse.Po
data/dcraw-9.28/.pc/: applied-patches
data/dcraw-9.28/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
data/dcraw-9.28/debian/: README.Debian  changelog  control  copyright  dcraw.lintian-overrides  getsource  rules
data/dcraw-9.28/debian/manpages/: dcfujigreen.1  dcfujiturn.1  dcparse.1
data/dcraw-9.28/debian/patches/: 715777.patch  721232.patch  906530.patch  add_autotools.diff  iowrap.diff
data/dcraw-9.28/debian/source/: include-binaries  lintian-overrides
data/dcraw-9.28/debian/upstream/: metadata
data/dcraw-9.28/sparrow/: .root  .smake.out  Makefile  dcraw-dcraw.o.i
data/dcraw-9.28/sparrow/.tags/: dccleancrw  dcfujigreen  dcfujiturn  dcfujiturn16  dcparse  dcraw
data/dcraw-9.28/sparrow/dccleancrw/: 00.clean_crw.o.i
data/dcraw-9.28/sparrow/dcfujigreen/: 00.fuji_green.o.i
data/dcraw-9.28/sparrow/dcfujiturn/: 00.fujiturn.o.i
data/dcraw-9.28/sparrow/dcfujiturn16/: 00.dcfujiturn16-fujiturn.o.i
data/dcraw-9.28/sparrow/dcparse/: 00.parse.o.i  dcraw.c
data/dia-0.97.3+git20160930/: Makefile.am  configure.ac
data/dia-0.97.3+git20160930/app/: menus.c
data/dia-0.97.3+git20160930/debian/: README.Debian  changelog  dia.install
data/dia-0.97.3+git20160930/lib/: dialib.c  diavar.h  textline.c
data/dia-0.97.3+git20160930/sparrow/: .root
data/dia-0.97.3+git20160930/tests/: sizeof  test-objects.c  testsvg
data/exiv2-0.27.5/.pc/: applied-patches
data/exiv2-0.27.5/debian/: changelog  control  copyright  libexiv2-27.install  libexiv2-27.symbols  (+5 more)
data/normalize-audio-0.7.7/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure~  libtool
data/rawtherapee-5.8/: ReleaseInfo.cmake
data/sane-frontends-1.0.14/: AUTHORS  INSTALL  Makefile  Makefile.in  PROBLEMS  acinclude.m4  config.status  configure  configure.in  sane-frontends.lsm
data/stk-4.6.1+dfsg/: Makefile  Makefile.in  config.status  configure  configure.ac
data/xfig-3.2.8b/: Makefile  config.h  config.status  configure
data/xsane-0.999/: Makefile  config.status  configure  configure.in
target_src/cccd/: cccd.c
target_src/normalize-audio/: normalize-audio.c
target_src/sane/: sane.c
tracer_data/: build-deb.sh
tracer_data/dcraw/dcraw-9.28/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README
tracer_data/dcraw/dcraw-9.28/.pc/: applied-patches
tracer_data/dcraw/dcraw-9.28/debian/: changelog  control  copyright  dcraw.examples  dcraw.manpages  getsource
tracer_data/dcraw/dcraw-9.28/debian/manpages/: dccleancrw.1  dcfujiturn16.1
tracer_data/dcraw/dcraw-9.28/debian/patches/: 864168.patch  add_autotools.diff  remove_LO_line_from_manpage.diff
tracer_data/dcraw/dcraw-9.28/debian/tests/: check  control
tracer_data/sane/sane-frontends-1.0.14/.pc/0001-fix_missing_sane-config.patch/: configure.in
tracer_data/xfig/: xfig-dbgsym_3.2.7b-2_amd64.ddeb  xfig-doc_3.2.7b-2_all.deb  xfig-libs_3.2.7b-2_all.deb  xfig_3.2.7b-2_amd64.buildinfo  xfig_3.2.7b-2_amd64.changes  xfig_3.2.7b-2_amd64.deb
(+1363 files in other folders)
